# llamafile

./: instructions.md
localscore/doc/: localscore_port_notes.md
localscore/python/: README.md  pyproject.toml  requirements.txt
localscore/python/localscore/: __main__.py  benchmark.py  http.py  power.py  system.py  utils.py
localscore/python/localscore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
localscore/python/tests/: __init__.py  test_models.py  test_system.py
